syntax = "proto3";

option csharp_namespace = "grpc_code_gen.comment";
option java_package = "grpc_code_gen.comment";

package comment;

import "get_one.proto";
import "get_some.proto";
import "get_all.proto";
import "get_all_sha256.proto";
import "create.proto";
import "update.proto";
import "delete.proto";

service CommentService {
  rpc GetOne (comment.get_one.Req) returns (comment.get_one.Rsp);
  rpc GetSome (comment.get_some.Req) returns (comment.get_some.Rsp);
  rpc GetAll (comment.get_all.Req) returns (comment.get_all.Rsp);
  rpc GetAllSha256 (comment.get_all_sha256.Req) returns (comment.get_all_sha256.Rsp);

  rpc Create (comment.create.Req) returns (comment.create.Rsp);
  rpc Update (comment.update.Req) returns (comment.update.Rsp);
  rpc Delete (comment.delete.Req) returns (comment.delete.Rsp);
}
